# template-autotools

./: .gitignore  ChangeLog  Makefile.am  README.md  bootstrap.sh  configure.ac
.github/workflows/: bandit.yml  build.yml  latex.yaml
docs/: article1.html  openbsd.md
include/: README.md
lib/: README.md
paper/: Dockerfile  Makefile.am  README.md  mybib.bib  paper-autotools-python.tex  preamble.tex
paper/code/: configure.ac  gitignore.txt  steps.txt
paper/frontmatter/: title.tex
src/: README.md
test/: format.sh  requirements-test.txt
tests/: 3.10.sh  README.md  install_python.sh
